# multi-agent-showcase

./: .gitignore  README.md  instructions.txt  main.py  pyproject.toml  requirements.txt  ressources.md
dynatrace_rules_index/: index.faiss  index.pkl
scripts/: install_guardrails.bat  start_cli_showcase.bat  start_dynatrace_mcp.bat  start_gradio_showcase.bat  start_showcase.bat  start_streamlit_showcase.bat
src/apps/: cli_chat.py  gradio_chat.py  streamlit_chat.py
src/graphs/: main_graph.py
src/prompts/: prompts.py
src/tools/: guardrails.py  mcp_servers.py  retrievers.py
src/utils/: chat_engine.py
