[project]
name = "multi-agent-showcase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-mcp-adapters>=0.1.10",
    "langgraph>=0.6.7",
    "python-dotenv>=1.1.1",
]
