[project]
name = "multi-agent-showcase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.47.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-mcp>=0.2.1",
    "langchain-mcp-adapters>=0.1.10",
    "langgraph>=0.6.7",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.1",
    "traceloop-sdk>=0.47.3",
]
